--- a/Hawk.Core/Themes/Theme.xaml
+++ b/Hawk.Core/Themes/Theme.xaml
@@ -28,19 +28,14 @@
 
     <Color x:Key="BlackColor">#FF000000</Color>
     <Color x:Key="WhiteColor">White</Color>
-     <Style x:Key="CommandMenuItem" TargetType="{x:Type MenuItem}">
-            <Setter Property="Header" Value="{Binding Text}" />
-            <Setter Property="Command" Value="{Binding}" />
-            <Setter Property="CommandParameter"
-        		Value="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}, Mode=FindAncestor}}" />
-        </Style>
+   
 
    
     <SolidColorBrush x:Key="TextBrush" Color="White" />
     <SolidColorBrush x:Key="NormalBrush" Color="{StaticResource MainColor}" />
     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF333333" />
     <SolidColorBrush x:Key="HoverBrush" Color="{StaticResource HoverColor}" />
-    <SolidColorBrush x:Key="GlyphBrush" Color="#FFD1D1D1" />
+    <SolidColorBrush x:Key="GlyphBrush" Color="#FFD1D1D1" />    
 
     <LinearGradientBrush x:Key="PressedBrush" EndPoint="0.5,0.971" StartPoint="0.5,0.042">
         <GradientStop Color="#4C000000" Offset="0" />
@@ -2811,6 +2806,10 @@
     </Style>
     <DropShadowBitmapEffect x:Key="PopupDropShadow" ShadowDepth="1.5" Softness="0.15" />
     <Style TargetType="{x:Type MenuItem}">
+         <Setter Property="Header" Value="{Binding Text}" />
+                <Setter Property="Command" Value="{Binding}" />
+                <Setter Property="ItemsSource" Value="{Binding ChildActions}" />
+                <Setter Property="CommandParameter" Value="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}, Mode=FindAncestor}}"/>
         <Setter Property="HorizontalContentAlignment"
                 Value="{Binding Path=HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
         <Setter Property="VerticalContentAlignment"
