--- a/Hawk/Lang/DefaultLanguage.xaml
+++ b/Hawk/Lang/DefaultLanguage.xaml
@@ -1767,7 +1767,7 @@
         保存位置
     </system:String>
     <system:String x:Key="key_743">
-        欢迎使用Hawk3
+        欢迎使用Hawk
     </system:String>
     <system:String x:Key="key_774">
         调试详情
