--- a/Hawk/App.xaml
+++ b/Hawk/App.xaml
@@ -7,8 +7,8 @@
         <ResourceDictionary>
         <ResourceDictionary.MergedDictionaries>
             <ResourceDictionary Source="pack://application:,,,/ToastNotifications.Messages;component/Themes/Default.xaml" />
-        <ResourceDictionary Source="/Hawk.Core;component/Themes/Theme.xaml" />
-                <ResourceDictionary Source="lang\DefaultLanguage.xaml"/>
+            <ResourceDictionary Source="/Hawk.ETL.Controls;component/Themes/Theme.xaml" />
+            <ResourceDictionary Source="lang\zh-CN.xaml"/>
 
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
