--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -501,6 +501,9 @@
     <system:String x:Key="RepeatTF">
         重复当前值
     </system:String>
+    <system:String x:Key="condition_check">
+        条件检查失败， 模块名为 {0} ,属性名为 {1}
+    </system:String>
     <system:String x:Key="key_712">
         {0}已经有任务在执行，为了避免副作用，请在任务管理器中取消该任务后再刷新
     </system:String>
@@ -1340,6 +1343,7 @@
     <system:String x:Key="key_634">
         2.请求参数
     </system:String>
+ 
     <system:String x:Key="key_18">
         名称
     </system:String>
