--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -463,14 +463,14 @@
                         </Viewbox>
                     </Button>
                     <Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[2]}" Width="35"
-                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left" d:LayoutOverrides="Height, Margin" />
+                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left"  />
                     <Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[0]}" Width="35"
-                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left" d:LayoutOverrides="Height, Margin" />
+                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left"  />
                     <Button Style="{DynamicResource middleButton}" DataContext="{Binding Commands5[3]}" Width="35"
-                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left" d:LayoutOverrides="Height, Margin" />
+                            Height="35" Margin="15,0,0,0" HorizontalAlignment="Left"/>
                     <Button Style="{DynamicResource middleButton2}" DataContext="{Binding Commands5[5]}" Width="35"
                             Height="35" Margin="25,0,0,0" HorizontalAlignment="Left"
-                            d:LayoutOverrides="Height, HorizontalMargin">
+                            >
                         <Viewbox Width="20" Height="20">
                             <Canvas RenderTransformOrigin="0.5,0.5" Width="50" Height="50">
                                 <Canvas.RenderTransform>
@@ -674,7 +674,7 @@
                         VerticalAlignment="Center" Width="80" Margin="10,0,0,0" />
             </StackPanel>
         </Grid>
-        <GridSplitter Margin="0,0,-2.438,0" Width="5" Grid.RowSpan="2" />
+        <GridSplitter Margin="0,0,-2,0" Width="5" Grid.RowSpan="2" />
 
     </Grid>
 </UserControl>
