--- a/Hawk.ETL.Controls/SystemStateViewer.xaml
+++ b/Hawk.ETL.Controls/SystemStateViewer.xaml
@@ -72,14 +72,14 @@
 
          
 			<DataTemplate x:Key="DataTemplate2">
-			<StackPanel Orientation="Horizontal">
+            <StackPanel   Background="Transparent" Orientation="Horizontal" mvvm:ListItemDoubleClick.Property="BindingCommands.ChildActions[4].ChildActions[3]">
 				<Rectangle Width="15" Height="15" Margin="0,0,10,0" >
 					<Rectangle.Fill>
 						<VisualBrush Stretch="Fill"
 							Visual="{Binding LogoURL, Converter={StaticResource MetroConverter}, Mode=OneWay}"  />
 					</Rectangle.Fill>
 				</Rectangle>
-                <TextBlock TextWrapping="Wrap" Text="{Binding Name}"  mvvm:ListItemDoubleClick.Property="BindingCommands.ChildActions[4].ChildActions[3]"  VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,1,5,1" FontSize="{DynamicResource LargeFont}">
+                <TextBlock TextWrapping="Wrap" Text="{Binding Name}"    VerticalAlignment="Center" HorizontalAlignment="Stretch" Margin="0,1,5,1" FontSize="{DynamicResource LargeFont}">
                      <mvvm:DropHelper.DropSupport>
                 <mvvm:DropSupportData BindingPath="BaseCommands[1]"/>
             </mvvm:DropHelper.DropSupport>
@@ -110,6 +110,8 @@
 				<Style TargetType="{x:Type ListBoxItem}"  BasedOn="{StaticResource {x:Type ListBoxItem}}">
 					<Setter Property="ContextMenu" Value="{StaticResource resourceContextMenu}" />
 					<Setter Property="AllowDrop" Value="True" />
+					<Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="VerticalContentAlignment" Value="Stretch" />
 				</Style>
 			</ListBox.Resources>
 			<ListBox.GroupStyle>
@@ -133,9 +135,10 @@
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [5]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
 			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />  
-			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />  
-			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />  
-							
-		</StackPanel>
+			<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [8]}" />
+            <Button Style="{DynamicResource miniButton}" DataContext="{Binding [4]}" />
+          
+        </StackPanel>
 	</Grid>
 </UserControl>
