--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -3093,9 +3093,14 @@ X	十六进制	255.ToString("X")	FF
         6. [数据清洗(2)]()  抓取新闻网页： 列表+详情页， 子任务的简单使用
         7. [数据清洗(3)]()  如何下载文件  下载报纸PDF和图片，
         8. [数据清洗(4)]()  如何读写数据表/数据库/文件 
-        9.  子任务专辑
-        10. 抓取手机app应用
-        11. 答疑和高级操作
+        8. [数据清洗(5)]()  错误重试
+        9.  [子任务专辑]()
+        10. [代理和反反爬虫专辑]()  
+        11. [抓取手机app专辑]() 以喜马拉雅为例，浅尝辄止  
+        12. [命令行脚本专辑]() 如何在无界面情况下使用Hawk
+        12. 答疑和高级操作
+        13. [编译和二次开发]()  增加新组件，编译时的坑
+        13. 完整案例1:  
          
 
         友情提示：由于软件更新频繁，界面有较大变化。但Hawk1到Hawk3在操作思路上基本一致，只是文案和布局上有少许区别，因此老版本的视频同样可做重要的参考资料。视频地址如下：
