--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -3008,6 +3008,7 @@
         
         示例工程文件: https://github.com/ferventdesert/Hawk-Projects/Hawk3
 
+
         教学视频地址： https://space.bilibili.com/312273788/channel/detail?cid=68345
 
         ## 介绍
@@ -3047,6 +3048,8 @@
 
          ![Hawk打赏小](https://upload-images.jianshu.io/upload_images/9608527-c5cac76b8af81a45.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+        这里是贡献者的[捐赠列表](https://ferventdesert.github.io/Hawk/%E6%8D%90%E8%B5%A0%E5%88%97%E8%A1%A8/)。
+         
 
         ## 教学视频和相关资源
 
@@ -3062,12 +3065,14 @@
         4. [网页采集器(2)](https://www.bilibili.com/video/av46846942) 单文档模式  抓取详情型网页，大众点评
         4. [网页采集器(3)](https://www.bilibili.com/video/av46847027) 动态嗅探  抓取瀑布流，共享参数，
         5. [数据清洗(1)](https://www.bilibili.com/video/av46847092/)  入门：  模块的分类，基本操作
-        6. [数据清洗(2)]()  抓取新闻网页： 列表+详情页， 子任务的简单使用
-        7. [数据清洗(3)]()  如何下载文件  下载报纸PDF和图片，
+        6. [数据清洗(2)](https://www.bilibili.com/video/av47810205/)  抓取新闻网页： 列表+详情页， 子任务的简单使用
+        7. [数据清洗(3)](https://www.bilibili.com/video/av47810355/)  如何下载文件  下载报纸PDF和图片，
         8. [数据清洗(4)]()  如何读写数据表/数据库/文件 
-        9.  子任务专辑
-        10. 抓取手机app应用
-        11. 答疑和高级操作
+        9. [数据清洗(5)]()  失败后如何回补数据
+        10.  子任务专辑
+        11. 抓取手机app应用
+        12. 增加代理和反反爬虫
+        13. 答疑和高级操作
          
 
         友情提示：由于软件更新频繁，界面有较大变化。但Hawk1到Hawk3在操作思路上基本一致，只是文案和布局上有少许区别，因此老版本的视频同样可做重要的参考资料。视频地址如下：
@@ -3242,6 +3247,12 @@
         删除所在列的内容
 
         删除之后，在该列的内容和所有工具就不再可见。要想修改可以在{{smartetl_name}}界面左侧的模块列表里选择，修改和删除。
+    </system:String>
+
+     <system:String x:Key="donors" xml:space="preserve">
+       {{do}} 
+         
+
     </system:String>
     <system:String x:Key="SQLiteDatabase">
         SQLite数据库
@@ -4941,6 +4952,8 @@ json选择器选择“文档列表”模式即可，不需要python转换器。
         {{youku}}
 
         {{about}}
+
+        {{donors}}
 
         {{hawk1}}
 
