--- a/Hawk/Lang/zh-CN.xaml
+++ b/Hawk/Lang/zh-CN.xaml
@@ -3108,9 +3108,11 @@ X	十六进制	255.ToString("X")	FF
         10. [数据清洗(5)]()  失败后如何回补数据
         11. 子任务专辑
         12. [抓取手机app]() 万众期待的功能
-        13. 增加代理和反反爬虫
-        14. 答疑和高级操作
+        13. [多文档模式和行列转换]()  如何用正则提取多个内容等
+        14. 增加代理和反反爬虫
         15. [编译和二次开发]()
+        16. 答疑和高级操作
+
          
 
         友情提示：由于软件更新频繁，界面有较大变化。但Hawk1到Hawk3在操作思路上基本一致，只是文案和布局上有少许区别，因此老版本的视频同样可做重要的参考资料。视频地址如下：
